kits/kustomize/colis/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: colis-prod
  labels:
    passerelle: principale
