kits/kustomize/colis/overlays/prod/api-ressources.yaml
# Plus de mémoire pour l'API en production.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
      containers:
      - name: api
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            memory: 384Mi
